// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundControl Check Background Color layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-m": "",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-m": 45,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background Color layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-general-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background image layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-m": "fixed",
    "background-image-clip-general": "content-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-m": 0.55,
    "background-image-origin-general": "border-box",
    "background-image-origin-m": "border-box",
    "background-image-position-general": "left top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-m": "repeat",
    "background-image-size-general": "contain",
    "background-image-size-m": "contain",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background image layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background video layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
]
`;

exports[`BackgroundControl Check Background video layer 2`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-mediaURL-hover": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYappt",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-m": 0.44,
    "background-video-startTime": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 4,
    "type": "video",
  },
]
`;

exports[`BackgroundControl Check Background video layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-general": "",
    "background-color-general-hover": "",
    "background-color-m": "",
    "background-color-m-hover": "",
    "background-palette-color-general": 5,
    "background-palette-color-general-hover": 5,
    "background-palette-color-m": 5,
    "background-palette-color-m-hover": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-general-hover": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-m-hover": true,
    "background-palette-opacity-general": 45,
    "background-palette-opacity-general-hover": 0,
    "background-palette-opacity-m": 45,
    "background-palette-opacity-m-hover": 0,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "fixed",
    "background-image-attachment-general-hover": "local",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-m-hover": "local",
    "background-image-clip-general": "content-box",
    "background-image-clip-general-hover": "padding-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-m-hover": "padding-box",
    "background-image-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-crop-options-general": null,
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-mediaID-general": "",
    "background-image-mediaURL-general": "",
    "background-image-opacity-general": 0.55,
    "background-image-opacity-general-hover": 0.82,
    "background-image-opacity-m": 0.55,
    "background-image-opacity-m-hover": 0.82,
    "background-image-origin-general": "border-box",
    "background-image-origin-general-hover": "content-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-m-hover": "content-box",
    "background-image-position-general": "left top",
    "background-image-position-general-hover": "center top",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-m": "left top",
    "background-image-position-m-hover": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "repeat",
    "background-image-repeat-general-hover": "repeat-x",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-m-hover": "repeat-x",
    "background-image-size-general": "contain",
    "background-image-size-general-hover": "cover",
    "background-image-size-m": "contain",
    "background-image-size-m-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "display-general-hover": "none",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-clipPath-general": "",
    "background-video-endTime": "",
    "background-video-fallbackID-general": null,
    "background-video-fallbackURL-general": "",
    "background-video-loop": true,
    "background-video-mediaID": null,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-mediaURL-hover": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYappt",
    "background-video-opacity-general": 0.44,
    "background-video-opacity-general-hover": 1,
    "background-video-opacity-m": 0.44,
    "background-video-opacity-m-hover": 1,
    "background-video-startTime": 999,
    "display-general": "block",
    "display-general-hover": "none",
    "id": 3,
    "type": "video",
  },
]
`;
